added structured logging, made code more maintainable